--- a/src/style.css
+++ b/src/style.css
@@ -11,7 +11,12 @@
     margin: 16px 24px 16px 0;
     background: rgba(255, 255, 255, 0.3);
 }
-
+.container{
+  margin-top:20px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1em;
+}
 .ant-row-rtl .logo {
     float: right;
     margin: 16px 0 16px 24px;
